--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <nav class="navegacaonav">
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">contatos</a>
     </nav>
     <main>
         <article class="assuntomaior">
